--- a/stylesheet.css
+++ b/stylesheet.css
@@ -54,7 +54,7 @@
     margin-right: .45em
 }
 
-// Additional class for paragraphs that open with a double-quotation mark
+/* Additional class for paragraphs that open with a double-quotation mark */
 .pull-double.initial {}
 
 
@@ -68,5 +68,5 @@
     margin-right: .25em
 }
 
-// Additional class for paragraphs that open with a single-quotation mark
-.pull-single.initial {}
+/* Additional class for paragraphs that open with a single-quotation mark
+.pull-single.initial {} */
