fix stylesheet comment

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -68,5 +68,5 @@
     margin-right: .25em
 }
 
-/* Additional class for paragraphs that open with a single-quotation mark
-.pull-single.initial {} */
+/* Additional class for paragraphs that open with a single-quotation mark */
+.pull-single.initial {}
